# kitcolors

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  create.ipynb  create_picture.py  pyproject.toml
.github/workflows/: tests.yml
kitcolors/: __init__.py  color.py
scripts/: create_picture.py
tests/: test_color.py  test_kitcolors.py
