[tool.poetry]
name = "kitcolors"
version = "1.0.0"
description = ""
authors = ["Thomas <0milieux_member@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
