[project]
name = "kitcolors"
version = "1.9.0"
description = "Colors of the corporate design of the KIT."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Thomas", email = "0milieux_member@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kitcolors"]

[dependency-groups]
dev = ["pytest>=7.4.2", "matplotlib>=3.6.0"]
